<resources>
    <string name="app_name">myBuffet</string>

    <string name="global_show_details">Show Details</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_repeat_password">Repeat Password</string>
    <string name="login_btn_label_signup">Sign Up</string>
    <string name="login_btn_label_login">Log In</string>
    <string name="login_reset_password">Reset Password</string>
    <string name="login_failure_message">Login failed.</string>

    <string name="register_already_have_an_account">Already have an account? Sign in.</string>
    <string name="register_passwords_dont_match">Passwords do not match. Try again.</string>
    <string name="register_password_invalid">Password too short (min. 6 characters).</string>
    <string name="register_fields_not_filled">Please make sure to fill out all fields.</string>
    <string name="register_failure_message">Sign up failed.</string>

    <string name="resetPassword_failure_message">Password reset failed.</string>
    <string name="resetPassword_success_message">Password change request was sent to your email address.</string>

    <string name="myShares_portfolio">Portfolio</string>
    <string name="myShares_placeholder_money">0.00 €</string>
    <string name="myShares_day">Day</string>
    <string name="myShares_week">Week</string>
    <string name="myShares_month">Month</string>
    <string name="myShares_two_week">2 Week</string>
    <string name="myShares_year">Year</string>
    <string name="myShares_profit_loss_overview">Profit/Loss Overview</string>
    <string name="myShares_placeholder_percent">(+0.00%)</string>
    <string name="myShares_exchange_profit_loss">Holdings Value Change</string>
    <string name="myShares_dividend_profit">Dividend Profit</string>
    <string name="myShares_fees">Fees</string>
    <string name="myShares_stocks">Stocks</string>
    <string name="myShares_empty_placeholder">No stocks in your portfolio yet.</string>
    <string name="myShares_rv_placeholder_symbol">ABCD</string>
    <string name="myShares_rv_placeholder_name">Abcd Inc.</string>
    <string name="myShares_rv_label_dividend_profit">Dividend Profit</string>
    <string name="myShares_rv_label_total_holdings">Total Holdings</string>
    <string name="myShares_chart_empty_message">Not enough data available</string>

    <string name="purchase_item_value_placeholder">€ 0.00</string>
    <string name="purchase_item_date_placeholder">01.01.2021</string>
    <string name="purchase_item_fees_placeholder">€ 0.00</string>
    <string name="purchase_item_amount_placeholder">0</string>
    <string name="purchase_item_price_per_share_placeholder">€ 0.00</string>

    <string name="purchase_item_fee_label">Fees</string>
    <string name="purchase_item_amount_label">Shares</string>
    <string name="purchase_item_price_per_share_label">Share Price</string>

    <string name="share_detail_stock_default">ABC</string>
    <string name="share_detail_purchases">Purchases</string>
    <string name="share_detail_price_placeholder">€ 0.00</string>
    <string name="share_detail_percentage_placeholder">(+0.00%)</string>
    <string name="share_detail_holdings_overview">Profit/Loss Overview</string>
    <string name="share_detail_holdings_value_placeholder">€ 0.00</string>
    <string name="share_detail_holdings_value_percentage_placeholder">(+0.00%)</string>

    <string name="share_detail_total_investment_placeholder">€ 0.00</string>
    <string name="share_detail_total_investment_label">Total Investment Sum</string>
    <string name="share_detail_total_holdings_label">Total Holdings</string>
    <string name="share_detail_total_sales_label">Total Sales Sum</string>

    <string name="share_detail_exchange_profit_loss_label">Holdings Value Change</string>
    <string name="share_detail_exchange_profit_loss_placeholder">0.00 €</string>

    <string name="share_detail_dividend_profit_label">Dividend Profit</string>
    <string name="share_detail_dividend_profit_placeholder">€ 0.00</string>

    <string name="share_detail_fees_label">Fees</string>
    <string name="share_detail_fees_placeholder">€ 0.00</string>

    <string name="share_detail_add_fee_fab">add fees</string>
    <string name="share_detail_add_sale_fab">add sale</string>
    <string name="share_detail_add_dividend_fab">add dividends</string>
    <string name="share_detail_add_purchase_fab">add purchase</string>

    <string name="share_detail_empty_purchase_message">no purchases yet</string>
    <string name="share_detail_empty_sale_message">no sales yet</string>
    <string name="share_detail_empty_fees_message">no fees yet</string>
    <string name="share_detail_empty_dividends_message">no dividends yet</string>

    <string name="share_detail_sale_title">Sales</string>
    <string name="share_detail_dividend_title">Dividends</string>
    <string name="share_detail_fee_title">Fees</string>

    <string name="share_detail_purchase_deleted">Purchase was deleted</string>
    <string name="share_detail_sale_deleted">Sale was deleted</string>
    <string name="share_detail_dividend_deleted">Dividend was deleted</string>
    <string name="share_detail_fee_deleted">Fee was deleted</string>
    <string name="share_detail_cant_be_deleted">Purchase could not be delted, to many sales exist</string>


    <string name="add_item_purchase_title">Add Share Purchase</string>
    <string name="add_item_purchase_subtitle">Share Purchase Details</string>
    <string name="add_item_purchase_symbol_label">Symbol</string>
    <string name="add_item_purchase_name_label">Name</string>
    <string name="add_item_purchase_price_per_share_label">Price per Share</string>
    <string name="add_item_purchase_number_of_share_label">Number of Shares</string>
    <string name="add_item_purchase_fee_label">Fees</string>
    <string name="add_item_purchase_date_label">Purchase Date</string>
    <string name="add_item_save_button">SAVE</string>

    <string name="add_item_sale_title">Add Share Sale</string>
    <string name="add_item_sale_subtitle">Share Sale Details</string>

    <string name="add_item_fee_title">Add Fee</string>
    <string name="add_item_fee_subtitle">Fee Details</string>
    <string name="add_item_fee_amount_label">Fee Amount</string>
    <string name="add_item_fee_description_label">Description</string>

    <string name="add_item_dividend_title">Add Dividends</string>
    <string name="add_item_dividend_subtitle">Dividends Detail</string>
    <string name="add_item_dividend_amount_label">Total Dividend Amount</string>
    <string name="add_item_dividend_number_label">Number of Dividends</string>

    <string name="dividend_item_date_placeholder">01.01.2021</string>
    <string name="dividend_item_amount_placeholder">€ 0.00</string>
    <string name="dividend_item_number_placeholder">0</string>
    <string name="dividend_item_number_label">Shares</string>

    <string name="fee_item_date_placeholder">01.01.2021</string>
    <string name="fee_item_amount_placeholder">€ 0.00</string>
    <string name="fee_item_description_placeholder">0</string>
    <string name="fee_item_description_label">Shares</string>


    <string name="stocks_title">Stocks</string>
    <string name="stocks_dividendReturn">Dividend return</string>
    <string name="stocks_placeholder_dividendReturn_placeholder">+0.00 %</string>
    <string name="stocks_dividendPerShare">Dividend p. share</string>

    <string name="news_title">News</string>

    <string name="profile_title">Profile</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>


</resources>