<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_pill_bg">

    <TextView
        android:id="@+id/item_purchase_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase_item_value_placeholder"
        android:textColor="@color/sharePrice_loss"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_purchase_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase_item_amount_placeholder"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase_item_date_placeholder"
        android:fontFamily="@string/font_roboto_medium"
        android:textSize="10sp"
        android:textColor="@color/grayText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_purchase_value" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase_item_amount_label"
        android:fontFamily="@string/font_roboto_medium"
        android:textSize="10sp"
        android:textColor="@color/grayText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_purchase_amount" />

    <TextView
        android:id="@+id/item_purchase_fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/purchase_item_fees_placeholder"
        android:textColor="@color/sharePrice_loss"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase_item_fee_label"
        android:fontFamily="@string/font_roboto_medium"
        android:textSize="10sp"
        android:textColor="@color/grayText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_purchase_fee" />

    <TextView
        android:id="@+id/item_purchase_share_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/purchase_item_price_per_share_placeholder"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase_item_price_per_share_label"
        android:fontFamily="@string/font_roboto_medium"
        android:textSize="10sp"
        android:textColor="@color/grayText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_purchase_share_price" />
</androidx.constraintlayout.widget.ConstraintLayout>