<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_pill_bg">

    <TextView
        android:id="@+id/item_fee_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fee_item_amount_placeholder"
        android:textColor="@color/sharePrice_loss"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_fee_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fee_item_description_placeholder"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_fee_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/font_roboto_medium"
        android:text="@string/fee_item_date_placeholder"
        android:textColor="@color/grayText"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_fee_amount" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/font_roboto_medium"
        android:text="@string/fee_item_description_label"
        android:textColor="@color/grayText"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_fee_description" />

</androidx.constraintlayout.widget.ConstraintLayout>